add styles for mobile view

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
               class="signup__image"
             />
           </header>
-          <section class="signup__content">
+
+ <div class="signup__wrapper">
+           <section class="signup__content">
             <h1 class="signup__title">Stay updated!</h1>
             <p class="signup__info">
               Join 60,000+ product managers receiving monthly updates on:
@@ -65,6 +67,7 @@
               </button>
             </form>
           </section>
+ </div>
         </div>
 
         <!-- Container for the success message -->
