--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             </section>
             <section class="signup__cta">
               <form action="" class="signup__form">
-                <label for="email" class="signup__label">Email address</label>
-                <span class="signup__error">xxx</span>
+                <div class="signup__label-wrapper">
+                  <label for="email" class="signup__label">Email address</label>
+                  <span class="signup__error">Invalid email</span>
+                </div>
                 <input
                   type="email"
                   class="signup__input"
