Fix: Issue with success message visibilitiy

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
+    
   </head>
   <body>
     <main>
@@ -60,7 +61,7 @@
               </ul>
             </section>
             <section class="signup__cta">
-              <form action="" class="signup__form">
+              <form action="#" class="signup__form" id="signup-form">
                 <div class="signup__label-wrapper">
                   <label for="email" class="signup__label">Email address</label>
                   <span class="signup__error" id="email-error"></span>
