--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/bouncer@1/dist/bouncer.polyfills.min.js"></script>
+    <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
     <script src="main.js" defer></script>
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
-    
   </head>
   <body>
     <main>
@@ -64,7 +63,7 @@
               <form action="#" class="signup__form" id="signup-form">
                 <div class="signup__label-wrapper">
                   <label for="email" class="signup__label">Email address</label>
-                  <span class="signup__error" id="email-error"></span>
+                  <span class="signup__error-message" id="email-error"></span>
                 </div>
                 <input
                   type="email"
@@ -84,14 +83,19 @@
         </div>
 
         <!-- Container for the success message -->
-        <div class="signup__success-container">
-          <img src="./assets/images/icon-success.svg" alt="Succes icon" class="success-message__icon">
-          <h2 class="success-message__title">Thanks for subscribing!</h2>
-          <p class="success-message__text">
-            A confirmation email has been sent to <span class="success-message__email-address"></span>. Please open it and
-            click the button inside to confirm your subscription.
+        <div class="signup__success hidden">
+          <img
+            src="./assets/images/icon-success.svg"
+            alt="Succes icon"
+            class="signup__success-icon"
+          />
+          <h2 class="signup__success-title">Thanks for subscribing!</h2>
+          <p class="signup__success-text">
+            A confirmation email has been sent to
+            <span class="success-message__email-address"></span>. Please open it
+            and click the button inside to confirm your subscription.
           </p>
-          <button class="success-message__dismiss-btn">Dismiss message</button>
+          <button  class="signup__success-dismiss-btn">Dismiss message</button>
         </div>
       </article>
     </main>
